# xapk2apk

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_axml.py  test_merge.py  test_sign.py
xapk2apk/: __init__.py  __main__.py  axml.py  cli.py  merge.py  sign.py
