[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xapk2apk"
version = "0.1.0"
description = "Merge XAPK splits into a single sideloadable, v2-signed APK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "cryptography>=40",
]
keywords = ["android", "apk", "xapk", "split-apk", "sideload", "apk-signing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving :: Packaging",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
xapk2apk = "xapk2apk.cli:main"

[tool.setuptools.packages.find]
include = ["xapk2apk*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
